feat(user): get /user/:id
